Fix paragraph style in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -12,7 +12,7 @@
     .card { background:#161616; padding:24px; border-radius:16px; width:min(640px, 92vw); box-shadow:0 10px 30px rgba(0,0,0,.4); }
     h1 { margin:0 0 8px; font-size:22px; color:#00ffff; }
     h2 { margin:0 0 6px; font-size:20px; color:#00ffef; }
-    p { margin:0 0 16px; opacity:.85 }
+    p { margin:0 0 16px; opacity:.85 color: #FFFFFF}
     .row { display:flex; gap:12px; align-items:center; margin:10px 0; }
     input[type="range"] { width:100%; }
     button { background:#00ffff; color:#000; border:0; padding:10px 14px; border-radius:10px; font-weight:700; cursor:pointer; }
